// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser try/catch statements accepts try/catch/end try 1`] = `
[
  TryCatch {
    "catchBlock": Block {
      "location": {
        "end": {
          "column": 0,
          "line": 6,
        },
        "file": "",
        "start": {
          "column": 7,
          "line": 4,
        },
      },
      "statements": [
        Print {
          "expressions": [
            Literal {
              "_location": {
                "end": {
                  "column": 20,
                  "line": 5,
                },
                "file": "",
                "start": {
                  "column": 10,
                  "line": 5,
                },
              },
              "value": BrsString {
                "inArray": false,
                "kind": 3,
                "value": "in catch",
              },
            },
          ],
          "tokens": {
            "print": {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 9,
                  "line": 5,
                },
                "file": "",
                "start": {
                  "column": 4,
                  "line": 5,
                },
              },
              "text": "print",
            },
          },
        },
      ],
    },
    "errorBinding": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 7,
            "line": 4,
          },
          "file": "",
          "start": {
            "column": 6,
            "line": 4,
          },
        },
        "text": "e",
      },
    },
    "tokens": {
      "catch": {
        "isReserved": true,
        "kind": "Catch",
        "literal": undefined,
        "location": {
          "end": {
            "column": 5,
            "line": 4,
          },
          "file": "",
          "start": {
            "column": 0,
            "line": 4,
          },
        },
        "text": "catch",
      },
      "endtry": {
        "isReserved": false,
        "kind": "EndTry",
        "literal": undefined,
        "location": {
          "end": {
            "column": 7,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 0,
            "line": 6,
          },
        },
        "text": "end try",
      },
      "try": {
        "isReserved": true,
        "kind": "Try",
        "literal": undefined,
        "location": {
          "end": {
            "column": 3,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 0,
            "line": 2,
          },
        },
        "text": "try",
      },
    },
    "tryBlock": Block {
      "location": {
        "end": {
          "column": 0,
          "line": 4,
        },
        "file": "",
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "statements": [
        Print {
          "expressions": [
            Literal {
              "_location": {
                "end": {
                  "column": 18,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 10,
                  "line": 3,
                },
              },
              "value": BrsString {
                "inArray": false,
                "kind": 3,
                "value": "in try",
              },
            },
          ],
          "tokens": {
            "print": {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 9,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 4,
                  "line": 3,
                },
              },
              "text": "print",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`parser try/catch statements accepts try/catch/endtry 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 0,
            "line": 8,
          },
          "file": "",
          "start": {
            "column": 10,
            "line": 2,
          },
        },
        "statements": [
          TryCatch {
            "catchBlock": Block {
              "location": {
                "end": {
                  "column": 4,
                  "line": 7,
                },
                "file": "",
                "start": {
                  "column": 11,
                  "line": 5,
                },
              },
              "statements": [
                Print {
                  "expressions": [
                    Literal {
                      "_location": {
                        "end": {
                          "column": 24,
                          "line": 6,
                        },
                        "file": "",
                        "start": {
                          "column": 14,
                          "line": 6,
                        },
                      },
                      "value": BrsString {
                        "inArray": false,
                        "kind": 3,
                        "value": "in catch",
                      },
                    },
                  ],
                  "tokens": {
                    "print": {
                      "isReserved": true,
                      "kind": "Print",
                      "literal": undefined,
                      "location": {
                        "end": {
                          "column": 13,
                          "line": 6,
                        },
                        "file": "",
                        "start": {
                          "column": 8,
                          "line": 6,
                        },
                      },
                      "text": "print",
                    },
                  },
                },
              ],
            },
            "errorBinding": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 11,
                    "line": 5,
                  },
                  "file": "",
                  "start": {
                    "column": 10,
                    "line": 5,
                  },
                },
                "text": "e",
              },
            },
            "tokens": {
              "catch": {
                "isReserved": true,
                "kind": "Catch",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 9,
                    "line": 5,
                  },
                  "file": "",
                  "start": {
                    "column": 4,
                    "line": 5,
                  },
                },
                "text": "catch",
              },
              "endtry": {
                "isReserved": false,
                "kind": "EndTry",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 10,
                    "line": 7,
                  },
                  "file": "",
                  "start": {
                    "column": 4,
                    "line": 7,
                  },
                },
                "text": "endtry",
              },
              "try": {
                "isReserved": true,
                "kind": "Try",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 7,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 4,
                    "line": 3,
                  },
                },
                "text": "try",
              },
            },
            "tryBlock": Block {
              "location": {
                "end": {
                  "column": 4,
                  "line": 5,
                },
                "file": "",
                "start": {
                  "column": 7,
                  "line": 3,
                },
              },
              "statements": [
                Print {
                  "expressions": [
                    Literal {
                      "_location": {
                        "end": {
                          "column": 22,
                          "line": 4,
                        },
                        "file": "",
                        "start": {
                          "column": 14,
                          "line": 4,
                        },
                      },
                      "value": BrsString {
                        "inArray": false,
                        "kind": 3,
                        "value": "in try",
                      },
                    },
                  ],
                  "tokens": {
                    "print": {
                      "isReserved": true,
                      "kind": "Print",
                      "literal": undefined,
                      "location": {
                        "end": {
                          "column": 13,
                          "line": 4,
                        },
                        "file": "",
                        "start": {
                          "column": 8,
                          "line": 4,
                        },
                      },
                      "text": "print",
                    },
                  },
                },
              ],
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 7,
            "line": 8,
          },
          "file": "",
          "start": {
            "column": 0,
            "line": 8,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 3,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 0,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 8,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 4,
          "line": 2,
        },
      },
      "text": "main",
    },
  },
]
`;

exports[`parser try/catch statements allows try and catch as variable names 1`] = `
[
  Assignment {
    "name": {
      "isReserved": true,
      "kind": "Try",
      "literal": undefined,
      "location": {
        "end": {
          "column": 3,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 0,
          "line": 2,
        },
      },
      "text": "try",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": 5,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 4,
            "line": 2,
          },
        },
        "text": "=",
      },
    },
    "value": Literal {
      "_location": {
        "end": {
          "column": 15,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 6,
          "line": 2,
        },
      },
      "value": BrsString {
        "inArray": false,
        "kind": 3,
        "value": "attempt",
      },
    },
  },
  Assignment {
    "name": {
      "isReserved": true,
      "kind": "Catch",
      "literal": undefined,
      "location": {
        "end": {
          "column": 5,
          "line": 3,
        },
        "file": "",
        "start": {
          "column": 0,
          "line": 3,
        },
      },
      "text": "catch",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": 7,
            "line": 3,
          },
          "file": "",
          "start": {
            "column": 6,
            "line": 3,
          },
        },
        "text": "=",
      },
    },
    "value": Literal {
      "_location": {
        "end": {
          "column": 28,
          "line": 3,
        },
        "file": "",
        "start": {
          "column": 8,
          "line": 3,
        },
      },
      "value": BrsString {
        "inArray": false,
        "kind": 3,
        "value": "whoops, dropped it",
      },
    },
  },
]
`;

exports[`parser try/catch statements allows try/catch to nest in try 1`] = `
[
  TryCatch {
    "catchBlock": Block {
      "location": {
        "end": {
          "column": 0,
          "line": 11,
        },
        "file": "",
        "start": {
          "column": 7,
          "line": 9,
        },
      },
      "statements": [
        Print {
          "expressions": [
            Literal {
              "_location": {
                "end": {
                  "column": 20,
                  "line": 10,
                },
                "file": "",
                "start": {
                  "column": 10,
                  "line": 10,
                },
              },
              "value": BrsString {
                "inArray": false,
                "kind": 3,
                "value": "in catch",
              },
            },
          ],
          "tokens": {
            "print": {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 9,
                  "line": 10,
                },
                "file": "",
                "start": {
                  "column": 4,
                  "line": 10,
                },
              },
              "text": "print",
            },
          },
        },
      ],
    },
    "errorBinding": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 7,
            "line": 9,
          },
          "file": "",
          "start": {
            "column": 6,
            "line": 9,
          },
        },
        "text": "e",
      },
    },
    "tokens": {
      "catch": {
        "isReserved": true,
        "kind": "Catch",
        "literal": undefined,
        "location": {
          "end": {
            "column": 5,
            "line": 9,
          },
          "file": "",
          "start": {
            "column": 0,
            "line": 9,
          },
        },
        "text": "catch",
      },
      "endtry": {
        "isReserved": false,
        "kind": "EndTry",
        "literal": undefined,
        "location": {
          "end": {
            "column": 6,
            "line": 11,
          },
          "file": "",
          "start": {
            "column": 0,
            "line": 11,
          },
        },
        "text": "endtry",
      },
      "try": {
        "isReserved": true,
        "kind": "Try",
        "literal": undefined,
        "location": {
          "end": {
            "column": 3,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 0,
            "line": 2,
          },
        },
        "text": "try",
      },
    },
    "tryBlock": Block {
      "location": {
        "end": {
          "column": 0,
          "line": 9,
        },
        "file": "",
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "statements": [
        Print {
          "expressions": [
            Literal {
              "_location": {
                "end": {
                  "column": 21,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 10,
                  "line": 3,
                },
              },
              "value": BrsString {
                "inArray": false,
                "kind": 3,
                "value": "outer try",
              },
            },
          ],
          "tokens": {
            "print": {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 9,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 4,
                  "line": 3,
                },
              },
              "text": "print",
            },
          },
        },
        TryCatch {
          "catchBlock": Block {
            "location": {
              "end": {
                "column": 4,
                "line": 8,
              },
              "file": "",
              "start": {
                "column": 11,
                "line": 6,
              },
            },
            "statements": [
              Print {
                "expressions": [
                  Literal {
                    "_location": {
                      "end": {
                        "column": 30,
                        "line": 7,
                      },
                      "file": "",
                      "start": {
                        "column": 14,
                        "line": 7,
                      },
                    },
                    "value": BrsString {
                      "inArray": false,
                      "kind": 3,
                      "value": "in upper catch",
                    },
                  },
                ],
                "tokens": {
                  "print": {
                    "isReserved": true,
                    "kind": "Print",
                    "literal": undefined,
                    "location": {
                      "end": {
                        "column": 13,
                        "line": 7,
                      },
                      "file": "",
                      "start": {
                        "column": 8,
                        "line": 7,
                      },
                    },
                    "text": "print",
                  },
                },
              },
            ],
          },
          "errorBinding": Variable {
            "name": {
              "isReserved": false,
              "kind": "Identifier",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 11,
                  "line": 6,
                },
                "file": "",
                "start": {
                  "column": 10,
                  "line": 6,
                },
              },
              "text": "e",
            },
          },
          "tokens": {
            "catch": {
              "isReserved": true,
              "kind": "Catch",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 9,
                  "line": 6,
                },
                "file": "",
                "start": {
                  "column": 4,
                  "line": 6,
                },
              },
              "text": "catch",
            },
            "endtry": {
              "isReserved": false,
              "kind": "EndTry",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 11,
                  "line": 8,
                },
                "file": "",
                "start": {
                  "column": 4,
                  "line": 8,
                },
              },
              "text": "end try",
            },
            "try": {
              "isReserved": true,
              "kind": "Try",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 7,
                  "line": 4,
                },
                "file": "",
                "start": {
                  "column": 4,
                  "line": 4,
                },
              },
              "text": "try",
            },
          },
          "tryBlock": Block {
            "location": {
              "end": {
                "column": 4,
                "line": 6,
              },
              "file": "",
              "start": {
                "column": 7,
                "line": 4,
              },
            },
            "statements": [
              Print {
                "expressions": [
                  Variable {
                    "name": {
                      "isReserved": false,
                      "kind": "Identifier",
                      "literal": undefined,
                      "location": {
                        "end": {
                          "column": 24,
                          "line": 5,
                        },
                        "file": "",
                        "start": {
                          "column": 23,
                          "line": 5,
                        },
                      },
                      "text": "y",
                    },
                  },
                ],
                "tokens": {
                  "print": {
                    "isReserved": true,
                    "kind": "Print",
                    "literal": undefined,
                    "location": {
                      "end": {
                        "column": 13,
                        "line": 5,
                      },
                      "file": "",
                      "start": {
                        "column": 8,
                        "line": 5,
                      },
                    },
                    "text": "print",
                  },
                },
              },
            ],
          },
        },
      ],
    },
  },
]
`;
